31-Jul-2021 - V0.17 Add scan for chemical component release date and update install scripts
 1-Aug-2021 - V0.18 Add support scanning and evaluating obsolete entries
26-Aug-2021 - V0.19 Update dependencies
21-Sep-2021 - V0.20 Add UpdateHoldingsProvider(), and discoveryMode option for local and remote repos in RespositoryProvider().
27-Sep-2021 - V0.21 Adjust URI paths in RespositoryProvider() and patch to compute missing BIRD annotations in the public archive
28-Sep-2021 - V0.22 Add a more specific test for validation report xml data in CurrentHoldingsProvider.hasValidationReportData()
29-Sep-2021 - V0.23 Make discoveryMode a configuration option rather than a constructor argument in RepositoryProvider() expose
                    inputIdCodeList as an argument for RepositoryProvider.getLocatorObjList()
29-Sep-2021 - V0.24 Make locator objects for URI targets tuples.
 8-Oct-2021 - V0.25 Pass configuration URLs to CurrentHoldingsProvider and RemoveHoldingsProvider
                    ValidationReportProvider() migrated to ValidationReportAdapter()
 8-Oct-2021 - V0.26 Add warning messages for empty read/merge container results in method __mergeContainers()
12-Oct-2021 - V0.27 Preserve the order of processing for input idCodeLists in RepositoryProvider()
14-Oct-2021 - V0.28 Extend the path search for model structures in RepositoryProvider()
17-Oct-2021 - V0.29 Repath consolidated computed models directory in RepositoryProvider()
17-Oct-2021 - V0.30 Update hierarchical search path for models in RepositoryProvider()
17-Mar-2022 - V0.31 Update hierarchical search path for models in RepositoryProvider(), and use configured PDBX_COMP_MODEL_SANDBOX_PATH value for topRepoPath;
                    Update HoldingsProvider classes to address issues with remote data loading
28-Mar-2022 - V0.32 Resolve Pylint issues
 5-Apr-2022 - V0.33 Add support in RepositoryProvider for loading id code lists for bird_chem_comp_core (mainly used for Azure testing)