@@ -26,3 +26,4 @@
                     Update HoldingsProvider classes to address issues with remote data loading
 28-Mar-2022 - V0.32 Resolve Pylint issues
  5-Apr-2022 - V0.33 Add support in RepositoryProvider for loading id code lists for bird_chem_comp_core (mainly used for Azure testing)
+13-Apr-2022 - V0.34 Update RepositoryProvider methods for obtaining list of computed-model files
